--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+@media screen and (max-width: 480px) {
+    html {
+        font-size: 12px;
+    }
+}
